# AletheiaJSVersionDetection

./: README.md
crawler/: docker-compose.yml
crawler/bundlefetcher-stealth/: Dockerfile  bundlefetcher-stealth.py  puppeteer.mjs  requirements.txt
crawler/domainlist/: Dockerfile  domainlist.py
crawler/hev-socks5-proxy/: Dockerfile  entrypoint.sh  hev.yml
crawler/object-storage/: Dockerfile  object-storage.py  requirements.txt
crawler/pipeline-helper/: pyproject.toml
crawler/separating-collector/: Dockerfile  requirements.txt  separating-collector.py
crawler/throttle/: Dockerfile  throttle.py
datasets/: README.md
dolospy/: .gitignore  BUILD.md  CMakeLists.txt  main.cpp  pyproject.toml
dolospy/dolospy/: __init__.py  __main__.py  dolospy.pyi
dolospy/src/: hashing.cpp  hashing.h  index.cpp  index.h  tokenizer.cpp  tokenizer.h
dolospy/src/interface/: interface.cpp  interface.h  python.cpp
evaluation/: bundler-prevalence.ipynb  cdn-urls.ipynb  common.py  lab-aletheia.ipynb  lab-bundler-study.ipynb  lab-dolos.ipynb  real-aletheia.ipynb  real-bundler-study.ipynb  real-dolos.ipynb  update-patterns-aletheia.ipynb  update-patterns-cdn.ipynb  update-patterns-dolos.ipynb  update-patterns-pnpm.ipynb
scripts/: aletheia_speed_eval.py  aletheia_speed_eval_real_vd.py  aletheia_speed_eval_recover.py  analyze_bundle_dataset.py  biome.json  bun-serve.mjs  dolos_speed_eval.py  dolos_speed_eval_real_vd.py  file-selector.mjs  generate_bundles.py  local_version_fetcher.py  npm_mirror.py  pack_bundles.py  package.json  vulnerability-database.py
(+8 files in other folders)
